@@ -3,6 +3,7 @@ package com.customer.ordermanagementsystem.shop.service;
 import com.customer.ordermanagementsystem.shop.domain.item.Item;
 import com.customer.ordermanagementsystem.shop.domain.item.Type;
 import com.customer.ordermanagementsystem.shop.repository.ItemRepository;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -12,15 +13,10 @@ import java.util.stream.Collectors;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
 
     private final ItemRepository itemRepository;
-
-    @Autowired
-    public ItemServiceImpl(ItemRepository itemRepository) {
-        this.itemRepository = itemRepository;
-    }
-
 
     @Override
     public List<Item> getItems() {
@@ -31,8 +27,6 @@ public class ItemServiceImpl implements ItemService {
     public List<Item> getItemsOfType(Type type) {
         return itemRepository.findAll().stream()
                 .filter(e -> e.getType().equals(type))
-                .collect(Collectors.toList());
+                .toList();
     }
-
-
 }
